<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2017 K Sun <jcodeing@gmail.com>

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@android:color/white"
  android:orientation="vertical">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:orientation="horizontal">
    <TextView
      android:id="@+id/video_1"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:gravity="center"
      android:text="@string/multiple_v1"
      android:textColor="@color/primary"
      android:textSize="27sp"
      tools:ignore="NestedWeights"/>
    <TextView
      android:id="@+id/video_2"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:layout_marginStart="5dp"
      android:layout_marginLeft="5dp"
      android:gravity="center"
      android:text="@string/multiple_v2"
      android:textColor="@color/primary"
      android:textSize="27sp"
      tools:ignore="NestedWeights"/>
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:layout_margin="5dp"
    android:orientation="horizontal">
    <TextView
      android:id="@+id/video_3"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:gravity="center"
      android:text="@string/multiple_v3"
      android:textColor="@color/primary"
      android:textSize="27sp"
      tools:ignore="NestedWeights"/>
    <TextView
      android:id="@+id/video_4"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:layout_marginStart="5dp"
      android:layout_marginLeft="5dp"
      android:gravity="center"
      android:text="@string/multiple_v4"
      android:textColor="@color/primary"
      android:textSize="27sp"
      tools:ignore="NestedWeights"/>
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:orientation="horizontal">
    <TextView
      android:id="@+id/video_5"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:gravity="center"
      android:text="@string/multiple_v5"
      android:textColor="@color/primary"
      android:textSize="27sp"
      tools:ignore="NestedWeights"/>
    <TextView
      android:id="@+id/video_6"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:layout_marginStart="5dp"
      android:layout_marginLeft="5dp"
      android:gravity="center"
      android:text="@string/multiple_v6"
      android:textColor="@color/primary"
      android:textSize="27sp"
      tools:ignore="NestedWeights"/>
  </LinearLayout>
</LinearLayout>