<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2017 K Sun <jcodeing@gmail.com>

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
    android:id="@+id/part_speed"
    android:layout_width="wrap_content"
    android:layout_height="30dp"
    android:layout_gravity="top|end"
    android:background="@color/k_bg_common"
    android:gravity="center"
    android:minWidth="35dp"
    android:text="@string/speed_1_x"
    android:textColor="@android:color/white"
    android:textSize="12sp"/>

  <!--=========@Bottom@=========-->
  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:layout_gravity="bottom|start"
    android:orientation="horizontal">
    <TextView
      android:id="@id/k_position_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/ctrl_layer_position"
      android:textColor="@color/accent"
      android:textSize="11.0sp"/>
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/ctrl_layer_time_space"
      android:textColor="@color/primary"/>
    <TextView
      android:id="@id/k_duration_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/ctrl_layer_duration"
      android:textColor="@color/primary"
      android:textSize="11.0sp"/>
  </LinearLayout>


  <!--=========@Right@=========-->
  <LinearLayout
    android:id="@id/k_ctrl_layer_part_right"
    android:layout_width="35dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:layout_gravity="end|top"
    android:orientation="vertical"
    tools:ignore="UseCompoundDrawables">

    <ImageView
      android:id="@id/k_switch_control_layer"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:layout_marginTop="1dp"
      android:padding="3dp"
      android:background="@color/k_bg_common"
      android:contentDescription="@string/switch_ctrl_layer_land"
      app:srcCompat="@drawable/ic_go_full_screen"/>

    <TextView
      android:id="@+id/part_switch_subtitle"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:layout_marginTop="1dp"
      android:padding="3dp"
      android:background="@color/k_bg_common"
      android:gravity="center"
      android:text="@string/subtitle_en"
      android:textColor="@android:color/white"
      android:textSize="12sp"/>
  </LinearLayout>

  <!--=========@Middle@=========-->
  <FrameLayout
    android:id="@id/k_ctrl_layer_part_middle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">
    <com.jcodeing.kmedia.widget.ProgressCircle
      android:id="@id/k_progress_any"
      android:layout_width="37dp"
      android:layout_height="37dp"
      app:progressBackgroundColor="@android:color/white"
      app:progressColor="@color/accent"
      app:progressCoreBackgroundColor="@color/k_bg_common"
      app:progressStyle="STROKE"
      app:progressWidth="1dp">

      <ImageView
        android:id="@id/k_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/k_description_play"
        app:srcCompat="@drawable/k_ic_play"/>

      <ImageView
        android:id="@id/k_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/k_description_pause"
        android:visibility="gone"
        app:srcCompat="@drawable/k_ic_pause"/>
    </com.jcodeing.kmedia.widget.ProgressCircle>
  </FrameLayout>


  <!--=========@X View@=========-->
  <!--=========@Tips-->
  <TextView
    android:id="@id/k_ctrl_layer_part_tips_tv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="top|center_horizontal"
    android:background="@color/k_bg_common"
    android:drawablePadding="2dp"
    android:gravity="center"
    android:minHeight="70dp"
    android:minWidth="70dp"
    android:textColor="@android:color/white"
    android:textSize="21sp"
    android:visibility="gone"/>

</FrameLayout>
